--- a/OS/커널, 시스템 콜.md
+++ b/OS/커널, 시스템 콜.md
@@ -1,4 +1,14 @@
 
+# 커널 모드 vs 유저 모드
+CPU는 두 가지 모드를 갖는다. 
+유저 모드 - 일반 프로그램 실행, 시스템 자원 접근 불가
+커널 모드 - 커널 코드 실행, 시스템 자원 접근 가능
+
+유저 모드 프로그램은 시스템 자원에 접근하지 못함.
+
+그럼 유저 프로
+
+
 # 시스템 콜
 유저 프로그램에서 작업하다가 시스템 자원에 접근할 필요가 있을 때 모드를 바꿔서 커널에 진입하는 것.
 
