--- a/OS/03.Process Management.md
+++ b/OS/03.Process Management.md
@@ -1,1 +1,22 @@
+# 프로세스
 
+### 프로그램
+컴퓨터 시스템에 실행 요청 전의 상태(디스크에 저장되어 있는).
+
+### 프로세스
+실행을 위해 시스템(커널)에 등록되어 실행 대기 또는 실행 중인 프로그램.
+
+<img width="1072" height="358" alt="image" src="https://github.com/user-attachments/assets/f2b410de-048a-4c51-ac47-b9a0974fc329" />
+
+### 프로세스 상세
+* 실행중인 프로그램
+  커널에 등록되고 커널의 관리하에 있음
+  각종 자원들을 요청하고 할당 받을 수 있다
+  PCB를 할당 받은 개체
+* PCB(Process Control Block)
+  커널 공간 내에 존재
+  각 프로세스들에 대한 정보 관리
+
+
+
+  
