--- a/OS/03.Process Management.md
+++ b/OS/03.Process Management.md
@@ -1,22 +1,131 @@
 # 프로세스
+## 1. 프로그램
+디스크에 저장되어 컴퓨터 시스템에 실행 요청 되기 전의 상태.
 
-### 프로그램
-컴퓨터 시스템에 실행 요청 전의 상태(디스크에 저장되어 있는).
+## 2. 프로세스
+실행을 위해 시스템(커널)에 등록되어 실행 대기 또는 실행 중인 작업(프로그램).<br/>
+커널에 등록되어 커널의 관리하에 있는 작업<br/>
+프로세스 관리 블록(PCB)를 할당 받은 작업<br/>
 
-### 프로세스
-실행을 위해 시스템(커널)에 등록되어 실행 대기 또는 실행 중인 프로그램.
+### 2-1) 프로세스 종류
+* 시스템 (커널) 프로세스:<br/>
+모든 시스템 메모리와 프로세서의 명령에 액세스 할 수 있는 프로세스.<br/>
+프로세스 실행 순서 제어, 다른 사용자 및 커널 영역 보호, 사용자 프로세스 생성.
 
-<img width="1072" height="358" alt="image" src="https://github.com/user-attachments/assets/f2b410de-048a-4c51-ac47-b9a0974fc329" />
-
-### 프로세스 상세
-* 실행중인 프로그램
-  커널에 등록되고 커널의 관리하에 있음
-  각종 자원들을 요청하고 할당 받을 수 있다
-  PCB를 할당 받은 개체
-* PCB(Process Control Block)
-  커널 공간 내에 존재
-  각 프로세스들에 대한 정보 관리
-
-
-
+* 사용자 프로세스:<br/>
+사용자 코드를 수행하는 프로세스.
   
+### 2-2) 프로그램 -> 프로세스
+<img width="1072" height="358" alt="image" src="https://github.com/user-attachments/assets/f2b410de-048a-4c51-ac47-b9a0974fc329" /><br/>
+
+## 3. 자원 (Resource)의 개념
+커널의 관리 하에 프로세스에게 할당/반납되는 수동적 개체.<br/>
+
+### 3-1) 자원의 분류
+* H/W resources:<br/>
+Processor, memory, disk, monitor, keyboard, ....
+
+* S/W resources:<br/>
+Message, signal, files, installed SWs, ...
+
+## 4. PCB(Process Control Block)
+OS가 프로세스 관리에 필요한 정보 저장.<br/>
+프로세스 생성 시, 생성된다.<br/>
+<img width="713" height="438" alt="image" src="https://github.com/user-attachments/assets/d7b9f1c8-bcaa-4e65-af98-e05c1a1cfc6d" /><br/>
+
+### 4-1) PCB가 관리하는 정보
+<table>
+  <tr>
+    <td>PID(Process Identification Number)</td>
+    <td>프로세스 고유 식별 번호</td>
+  </tr>
+  <tr>
+    <td>스케줄링 정보</td>
+    <td>프로세스 우선순위 등과 같은 스케줄링 관련 정보</td>
+  </tr>
+  <tr>
+    <td>프로세스 상태</td>
+    <td>자원 할당, 요청 정보</td>
+  </tr>
+  <tr>
+    <td>메모리 관리 정보</td>
+    <td>Page Table, Segment Table 등</td>
+  </tr>
+  <tr>
+    <td>입출력 상태 정보</td>
+    <td>할당 받은 입출력 장치, 파일 등에 대한 정보</td>
+  </tr>
+  <tr>
+    <td>문맥 저장 영역(Context Save Area)</td>
+    <td>프로세스의 레지스터 상태를 저장하는 공간 등</td>
+  </tr>
+  <tr>
+    <td>계정 정보</td>
+    <td>(다중 사용자인 경우)자원 사용 시간 등을 관리</td>
+  </tr>
+</table>
+
+## 5. 프로세스의 상태
+프로세스는 생성된 후에 여러 가지 상태로 변경되어 가며 작업을 하게 된다.<br/>
+이 상태는 자원 간의 상호작용에 의해 결정이 된다.
+
+<img width="845" height="277" alt="image" src="https://github.com/user-attachments/assets/d5e7541a-506d-4440-92aa-3864b7fa7c3f" /><br/>
+
+<img width="935" height="422" alt="image" src="https://github.com/user-attachments/assets/8889b8c2-c506-4ab1-97fe-7087821eac0c" /><br/>
+이거를 그냥 보기는 힘들기 때문에 한 구간씩 잘라서 본다.<br/>
+
+### 5-1) Created State
+<img width="599" height="274" alt="image" src="https://github.com/user-attachments/assets/d0356870-f9af-4e55-a276-23da4740bc28" /><br/>
+프로그램 실행 -> 작업을 커널에 등록 -> PCB 할당 및 프로세스 생성<br/>
+위의 과정을 거쳐 프로세스가 생성된 상태.<br/>
+
+이후 상태 전이는 <br/>
+사용할 수 있는 메모리 공간이 있으면 Created -> Ready.<br/>
+사용할 수 있는 메모리 공간이 없다면 Created -> Suspended Ready.<br/>
+
+### 5-2) Ready State
+<img width="363" height="228" alt="image" src="https://github.com/user-attachments/assets/09370d86-f0ce-4a33-9009-776b21408c8d" /><br/>
+프로세서 외에 다른 모든 자원을 할당 받은 상태로 프로세서 할당을 대기하는 상태<br/>
+
+* Dispatch(= Schedule) :<br/>
+  CPU 할당 받는 것. 이 동작 이후 Ready -> Running.
+
+### 5-3) Suspended Ready State
+
+### 5-4) Running State
+<img width="549" height="228" alt="image" src="https://github.com/user-attachments/assets/3a3c73cf-1cea-4023-b203-f7c4970546f7" /><br/>
+프로세서와 필요한 자원을 모두 할당 받아 실제로 동작하는 상태.<br/>
+계속 실행하는 것은 아니고 아래 두가지 중 하나의 이유로 인해 상태가 전이된다.<br/>
+
+#### 5-4-1) Preemption
+프로세서 스케줄링에 의해 변경(time-out, priority changes).<br/>
+할당된 시간이 끝나거나(time-out), 우선순위 변경(priority changes)되면<br/>
+Running -> Ready로 상태가 변경된다.<br/>
+
+#### 5-4-2) Block/Sleep
+I/O 요청 등에 의해 block 된다.<br/>
+Running -> Sleep으로 상태 변경.<br/>
+
+### 5-5) Block/Sleep State
+<img width="572" height="253" alt="image" src="https://github.com/user-attachments/assets/11f6e3a1-97ad-49cf-826a-581a18d81377" /><br/>
+프로세서 외에 다른 자원을 기다리는 상태.<br/>
+자원 할당은 시스템 콜에 의해 이루어짐.<br/>
+대기하다가 요청한 I/O 등이 오면 wakeup하여 block/sleep -> ready.<br/>
+
+
+
+Create State
+프로그램 실행 -> 커널에 등록, PCB 할당 받아서 프로세스 생성 ->
+
+Ready State
+-> 사용할 수 있는 메모리 공간이 준비됨 ->
+
+Running State
+
+
+
+
+
+
+
+
