--- a/OS/03.Process Management.md
+++ b/OS/03.Process Management.md
@@ -69,32 +69,32 @@ OS가 프로세스 관리에 필요한 정보 저장.<br/>
 프로세스는 생성된 후에 여러 가지 상태로 변경되어 가며 작업을 하게 된다.<br/>
 이 상태는 자원 간의 상호작용에 의해 결정이 된다.
 
+### 할당된 자원에 따른 프로세스 상태
 <img width="845" height="277" alt="image" src="https://github.com/user-attachments/assets/d5e7541a-506d-4440-92aa-3864b7fa7c3f" /><br/>
 
+### 프로세스의 상태 전이
 <img width="935" height="422" alt="image" src="https://github.com/user-attachments/assets/8889b8c2-c506-4ab1-97fe-7087821eac0c" /><br/>
 이거를 그냥 보기는 힘들기 때문에 한 구간씩 잘라서 본다.<br/>
 
 ### 5-1) Created State
+처음에 프로그램을 가동하여 실행된 상태.<br/>
 <img width="599" height="274" alt="image" src="https://github.com/user-attachments/assets/d0356870-f9af-4e55-a276-23da4740bc28" /><br/>
 프로그램 실행 -> 작업을 커널에 등록 -> PCB 할당 및 프로세스 생성<br/>
-위의 과정을 거쳐 프로세스가 생성된 상태.<br/>
 
 이후 상태 전이는 <br/>
 사용할 수 있는 메모리 공간이 있으면 Created -> Ready.<br/>
 사용할 수 있는 메모리 공간이 없다면 Created -> Suspended Ready.<br/>
 
 ### 5-2) Ready State
+프로세서(CPU) 외에 다른 모든 자원을 할당 받은 상태로 프로세서 할당을 대기하는 상태.<br/>
 <img width="363" height="228" alt="image" src="https://github.com/user-attachments/assets/09370d86-f0ce-4a33-9009-776b21408c8d" /><br/>
-프로세서 외에 다른 모든 자원을 할당 받은 상태로 프로세서 할당을 대기하는 상태<br/>
+* Dispatch(= Schedule): CPU를 할당함.
 
-* Dispatch(= Schedule) :<br/>
-  CPU 할당 받는 것. 이 동작 이후 Ready -> Running.
+CPU를 할당 받으면 Ready -> Running.<br/>
 
-### 5-3) Suspended Ready State
-
-### 5-4) Running State
-<img width="549" height="228" alt="image" src="https://github.com/user-attachments/assets/3a3c73cf-1cea-4023-b203-f7c4970546f7" /><br/>
+### 5-3) Running State
 프로세서와 필요한 자원을 모두 할당 받아 실제로 동작하는 상태.<br/>
+<img width="549" height="228" alt="image" src="https://github.com/user-attachments/assets/3a3c73cf-1cea-4023-b203-f7c4970546f7" /><br/>
 계속 실행하는 것은 아니고 아래 두가지 중 하나의 이유로 인해 상태가 전이된다.<br/>
 
 #### 5-4-1) Preemption
@@ -112,20 +112,60 @@ Running -> Sleep으로 상태 변경.<br/>
 자원 할당은 시스템 콜에 의해 이루어짐.<br/>
 대기하다가 요청한 I/O 등이 오면 wakeup하여 block/sleep -> ready.<br/>
 
+### Suspended
+Suspended Ready, Suspended Block 상태가 있는데 Ready(Active), Block(Active)와의 차이는 
+메모리 공간을 할당 받았으면 Active Ready, 메모리 공간을 할당 받지 못 했으면 Suspended Ready.
+
+* 메모리를 할당 받지 못한(빼앗긴) 상태.
+* Memory Image를 Swap Device에 보관.
+* 커널 또는 사용자에 의해 발생.
+
+* Swap Device: 프로그램 정보 저장을 위한 공간.
+* Swap-out(suspended):메모리 공간 할당 해제, 메모리에서 Swap Device.
+* Swap-in(resume):메모리 공간을 다시 할당 받음, Swap Device에서 메모리로.
+
+### 5-6) Suspended Ready
+메모리가 없이 대기하는 상태.
+
+### 5-7) Suspended Block
+I/O 하려고 block 됬는데 메모리도 빼앗긴 상태.
+
+### 5-8) Terminated/Zombie State
+프로세스의 수행이 끝난 상태.<br/>
+모든 자원 반납하고 커널 내에 일부 PCB 정보만 남아 있는 상태.<br/>
+
+자원을 반납하고 끝나기를 대기하는 상태이고 이후 커널이 PCB 정보를 회수하면 소멸한다.
+
+<img width="743" height="325" alt="image" src="https://github.com/user-attachments/assets/d1862fd0-3633-49c1-95ea-9112ed8e1798" /><br/>
+프로세서들은 Ready 큐에서 스케줄러에 의해 Dispatch되는 것을 대기.<br/>
+
+Sleep 상태에서 프로세서 외에 다른 자원들을 기다리고 있으며 자원 별로 큐가 따로 존재한다.<br/>
+I/O, Device 등 여러 자원 별로 큐에 담겨서 대기한다.
+
+## 6. 인터럽트(Interrupt)
+예상치 못한(Unexpected), 외부에서 발생한 이벤트(external events).
+
+* 인터럽트 종류:<br/>
+I/O, Clock, Console, Program, Machine, Inter-process, System call2
+
+### 인터럽트 처리 과정
+<img width="948" height="385" alt="image" src="https://github.com/user-attachments/assets/f9bdb1d6-b029-4dc3-8b12-6920d56cca67" /><br/>
+1. 프로세스 동작 중 인터럽트 발생
+2. 커널이 개입하여 프로세스 중단
+3. 인터럽트 발생한 곳, 원인 파악
+4. 그에 맞는 조치(인터럽트 서비스 루틴) 찾아서 호출.
+
+<img width="855" height="563" alt="image" src="https://github.com/user-attachments/assets/ddcbec5b-3761-431a-8d8d-e6cd90f69c82" /><br/>
 
 
-Create State
-프로그램 실행 -> 커널에 등록, PCB 할당 받아서 프로세스 생성 ->
-
-Ready State
--> 사용할 수 있는 메모리 공간이 준비됨 ->
-
-Running State
 
 
+1. 프로세스 동작 중에 인터럽트 발생 -> 커널 개입하여 프로세스 중단, 현재 컨텍스트를 PCB에 저장.
+2. 커널 인터럽트 핸들러에서 인터럽트 핸들링(원인과 발생지를 파악하고 그에 맞는 인터럽트 서비스 루틴 찾아서 실행)
+3. 
 
-
-
-
+현재 프로세스가 프로세서를 할당 받아 동작 중에 인터럽트 발생 -> 커널 개입하여 프로세스 중단 -> 
+프로세스의 현재 컨텍스트를 PCB에 저장 -> 
+이후 커널의 인터럽트 핸들러가 인터럽트 핸들링(어디서 발생? 원인은 뭔가 -> 올바른 조치는?)
 
 
