--- a/OS/03.Process Management.md
+++ b/OS/03.Process Management.md
@@ -148,24 +148,40 @@ I/O, Device 등 여러 자원 별로 큐에 담겨서 대기한다.
 * 인터럽트 종류:<br/>
 I/O, Clock, Console, Program, Machine, Inter-process, System call2
 
-### 인터럽트 처리 과정
+### 인터럽트 처리 과정 
 <img width="948" height="385" alt="image" src="https://github.com/user-attachments/assets/f9bdb1d6-b029-4dc3-8b12-6920d56cca67" /><br/>
 1. 프로세스 동작 중 인터럽트 발생
 2. 커널이 개입하여 프로세스 중단
 3. 인터럽트 발생한 곳, 원인 파악
-4. 그에 맞는 조치(인터럽트 서비스 루틴) 찾아서 호출.
+4. 그에 맞는 조치(ISR, 인터럽트 서비스 루틴) 찾아서 호출.
 
+### 인터럽트 처리 과정 상세
 <img width="855" height="563" alt="image" src="https://github.com/user-attachments/assets/ddcbec5b-3761-431a-8d8d-e6cd90f69c82" /><br/>
+1. 프로세스(P.i) 동작 중 인터럽트 발생
+2. 커널이 개입하여 프로세스 중단, PCB(PCB.i)에 현재 컨텍스트 저장. -> 현재 프로세스가 밀려남.
+3. 커널 인터럽트 핸들러에서 인터럽트 원인과 발생한 곳 파악. - IH(Interrupt Handling)
+4. 원인에 맞는 ISR을 호출하여 수행. - IS(Interrupt Service)
+5. ISR 종료
+6. 프로세서 스케줄러에서 Ready 중인 프로세스 큐에서 프로세스(PCB.j)를 가져와서 수행.
+
+## 7. Context Switching (문맥 교환)
+### Context
+프로세스와 관련된 정보들의 집합.<br/>
+
+프로세스가 동작할 때 사용하는 공간들
+CPU 레지스터 - CPU Register Context
+Memory - Code & Data, Stack, PCB
+
+프로세스의 관련 정보들은 
 
 
+### Context Saving
+현재 프로세스의 Register Context를 저장.
+### Context Restoring
+Register Context를 프로세스로 복구
 
-
-1. 프로세스 동작 중에 인터럽트 발생 -> 커널 개입하여 프로세스 중단, 현재 컨텍스트를 PCB에 저장.
-2. 커널 인터럽트 핸들러에서 인터럽트 핸들링(원인과 발생지를 파악하고 그에 맞는 인터럽트 서비스 루틴 찾아서 실행)
-3. 
-
-현재 프로세스가 프로세서를 할당 받아 동작 중에 인터럽트 발생 -> 커널 개입하여 프로세스 중단 -> 
-프로세스의 현재 컨텍스트를 PCB에 저장 -> 
-이후 커널의 인터럽트 핸들러가 인터럽트 핸들링(어디서 발생? 원인은 뭔가 -> 올바른 조치는?)
-
+### Context Switching
+커널의 개입.
+실행 중인 프로세스의 컨텍스트를 저장
+실행 할 다른 프로세스의 컨텍스트를 복구
 
