--- a/OS/03.Process Management.md
+++ b/OS/03.Process Management.md
@@ -168,20 +168,19 @@ I/O, Clock, Console, Program, Machine, Inter-process, System call2
 ### Context
 프로세스와 관련된 정보들의 집합.<br/>
 
-프로세스가 동작할 때 사용하는 공간들
-CPU 레지스터 - CPU Register Context
-Memory - Code & Data, Stack, PCB
+CPU는 어떤 작업을 할 때 메모리에 있는 데이터를 CPU 레지스터에 올려서 처리한다.<br/>
+프로세스에 CPU가 할당되면 메모리의 데이터를 CPU에 레지스터에 올리고<br/>
+프로세스에서 할당이 해제되면 레지스터의 작업중인 데이터를 메모리에 저장한다.<br/>
 
-프로세스의 관련 정보들은 
-
-
-### Context Saving
-현재 프로세스의 Register Context를 저장.
-### Context Restoring
-Register Context를 프로세스로 복구
+여기서 CPU를 할당 받아 메모리에서 레지스터로 옮기는 것을 Context Restoring.<br/>
+CPU 사용이 끝나서 레지스터의 데이터를 메모리로 저장시키는 것을 Context Saving.<br/>
 
 ### Context Switching
-커널의 개입.
-실행 중인 프로세스의 컨텍스트를 저장
-실행 할 다른 프로세스의 컨텍스트를 복구
+커널이 개입하여 실행 중인 프로세스의 컨텍스트를 저장하고 실행 할 다른 프로세스의 컨텍스트를 복구하는 것.
 
+### Context Switching Overhead
+컨텍스트 스위칭에 소요되는 비용.<br/>
+OS 마다 다르며 OS의 성능에 큰 영향을 준다.<br/>
+
+따라서 불필요한 컨텍스트 스위칭을 줄이는 것이 중요하다.<br/>
+이 비용을 줄이는 법 중 하나는 프로세스 대신 스레드를 사용하는 것이다.
