Update 02. 운영체제 개요.md

--- a/OS/02. 운영체제 개요.md
+++ b/OS/02. 운영체제 개요.md
@@ -15,9 +15,36 @@ SW Resource: file, application, message, signal, ...<br/>
 
 ## 컴퓨터 시스템의 구성
 <img width="725" height="536" alt="image" src="https://github.com/user-attachments/assets/99c7ed6a-9060-4621-9a7a-539ac1a9083b" /><br/>
-컴퓨터 하드웨어가 있고 그 위에 OS가 존재하고 이 하드웨어를 관리하며 사용자들에게 서비스를 제공한다.
+컴퓨터 하드웨어가 있고 그 위에 OS가 존재하여 OS가 응용 프로그램과 사용자들에게 서비스를 제공한다.<br/>
 
-사용자가 커널을 직접 접근하면 문제
-OS에 요청을 통해 처리하게끔
-시스템 콜 인터페이스는 그 요청을 하는 통로 개념
+사용자가 하드웨어에 직접 접근하면 리스크가 크므로 OS에 요청을 하여 처리하는 방식을 사용하고
+사용자가 OS에 요청을 하는 통로(함수)를 시스템 콜 인터페이스라고 한다.<br/>
+
+<img width="730" height="420" alt="image" src="https://github.com/user-attachments/assets/309e52f4-38e2-4b65-86b8-f8e8604ded84" /><br/>
+시스템 라이브러리: 시스템 콜 인터페이스.<br/>
+
+## 운영체제의 구분
+필요없어 보이는 것은 넘김.
+### 동시 사용자 수
+### 동시 실행 프로세스 수
+### 작업 수행 방식
+### 1) Parallel Processing System(병렬 처리 시스템)
+* 단일 시스템 내에서 둘 이상의 프로세서 사용.
+* 메모리 등의 자원 공유
+* 사용 목적: 성능 향상(주 목적), 신뢰성 향상
+* 프로세서간 관계 및 역할 관리 필요.
+
+## 운영체제의 구조
+### 커널
+OS의 핵심 부분.(계속 사용될 수 있게 메모리에 상주한다.)
+
+### 유틸리티(커널을 제외한 나머지)
+비상주 프로그램.
+UI 등 서비스 프로그램.
+
+
+
+
+
+
 
