Update 02. 운영체제 개요.md

--- a/OS/02. 운영체제 개요.md
+++ b/OS/02. 운영체제 개요.md
@@ -24,27 +24,25 @@ SW Resource: file, application, message, signal, ...<br/>
 시스템 라이브러리: 시스템 콜 인터페이스.<br/>
 
 ## 운영체제의 구분
-필요없어 보이는 것은 넘김.
-### 동시 사용자 수
-### 동시 실행 프로세스 수
-### 작업 수행 방식
-### 1) Parallel Processing System(병렬 처리 시스템)
-* 단일 시스템 내에서 둘 이상의 프로세서 사용.
-* 메모리 등의 자원 공유
-* 사용 목적: 성능 향상(주 목적), 신뢰성 향상
-* 프로세서간 관계 및 역할 관리 필요.
+* 동시 사용자 수
+* 동시 실행 프로세스 수
+* 작업 수행 방식
 
 ## 운영체제의 구조
-### 커널
-OS의 핵심 부분.(계속 사용될 수 있게 메모리에 상주한다.)
+* 커널<br/>
+  OS의 핵심 부분. (계속 사용될 수 있게 메모리에 상주.)<br/>
+  
+* 유틸리티(커널을 제외한 나머지)<br/>
+  UI 등 서비스 프로그램.<br/>
+  비상주 프로그램.<br/>
 
-### 유틸리티(커널을 제외한 나머지)
-비상주 프로그램.
-UI 등 서비스 프로그램.
-
-
-
-
+## 운영체제의 기능
+* 프로세스(Process) 관리
+* 프로세서(Processor) 관리
+* 메모리(memory) 관리
+* 파일(File) 관리
+* 입출력(I/O) 관리
+* 보조 기억 장치 및 기타 주변장치 관리 등
 
 
 
