Update 04. 스레드 관리.md

--- a/OS/04. 스레드 관리.md
+++ b/OS/04. 스레드 관리.md
@@ -10,11 +10,19 @@ Stack(local data) - 작업 영역
 
 제어 요소 외 코드, 데이터 및 자원들은 프로세스 내 다른 스레드들과 공유
 
-싱글 스레드
 <img width="752" height="408" alt="image" src="https://github.com/user-attachments/assets/6046bd9d-dd2d-4c0c-9e42-4c6f2a8a13c6" />
+PC(Program Counter): 내가 명령줄 어디를 실행하고 있었는지
+SP(Stack Pointer): 
+스택 영역: 지역 데이터
 
 멀티 스레드
 <img width="749" height="407" alt="image" src="https://github.com/user-attachments/assets/693ff459-fb23-4c24-b187-95533fa49232" />
+
+메모리 관점
+<img width="782" height="431" alt="image" src="https://github.com/user-attachments/assets/778b8321-1ba6-4048-b136-8784b54973cb" /><br/>
+어떤 프로세스가 있고 그 프로세스가 할당 받은 메모리 공간을 공유해서 사용.
+공용 메모리 공간에서 자원에 해당하는 공간은 공유해서 사용하고 제어 부분은 그 공간에서 구분해서 사용.
+
 
 스레드의 장점
 
