--- a/OS/메모리.md
+++ b/OS/메모리.md
@@ -39,4 +39,4 @@ XMP(인텔), EXPO(AMD).<br/>
 적용 방법은 BIOS 진입 -> 고급 모드 전환 -> XMP 활성화 -> 저장.<br/>
 그러니까 메인보드와 램에서 둘 다 이 기술을 지원해야 한다.
 
-# 랭크
+# 랭크, 메모리 컨트롤러, 인터리빙
