Update and rename 동기화.md to 동기화 기법들.md

--- a/OS/동기화 기법들.md
+++ b/OS/동기화 기법들.md
@@ -89,3 +89,5 @@ void consumer() {
   cv.wait(lock, [] { !q.empty(); });
 }
 ```
+추가 내용 : wait(lock) 버전은 무조건 블로킹, wait(lock, predicate) 버전은 처음에 조건이 이미 만족된다면 블로킹하지 않고 
+깨어날 때마다 조건 자동으로 재확인한다.<br/>
