--- a/OS/동기화 기법들.md
+++ b/OS/동기화 기법들.md
@@ -91,3 +91,73 @@ void consumer() {
 ```
 추가 내용 : wait(lock) 버전은 무조건 블로킹, wait(lock, predicate) 버전은 처음에 조건이 이미 만족된다면 블로킹하지 않고 
 깨어날 때마다 조건 자동으로 재확인한다.<br/>
+
+<br/><br/>
+
+# 2. mutex
+## mutex
+mutex, recursive_mutex, shared_mutex.<br/>
+
+```c++
+/*-------------------------------
+mutex
+가장 기본.
+--------------------------------*/
+std::mutex m;
+{
+  std::lock_guard<std::mutex> lock(m);
+  // 크리티컬 섹션
+}
+/*--------------------------------
+recursive_mutex
+
+--------------------------------*/
+std::recursive_mutex rm;7
+
+
+std::unique_lock<std::recursive_mutex> lock(rm);
+/*
+shared_mutex
+
+*/
+std::shared_mutex sm;
+
+
+```
+
+
+### mutex
+가장 기본
+
+### recursive_mutex
+
+### shared_mutex
+
+
+* mutex
+  가장 기본
+* recursive_mutex
+  중첩 가능
+* shared_mutex
+  
+
+
+## mutex RAII 래퍼
+lock_guard, unique_lock, shared_lock.<br/>
+
+
+
+lock_guard
+가장 간단, 생성 시 lock, 소멸 시 unlock
+
+unique_lock
+lock, unlock 타이밍을 본인이 조절 가능
+그 외에도 lock_guard 보다 더 많은 기능
+
+
+
+
+
+
+
+
