--- a/OS/동기화 기법들.md
+++ b/OS/동기화 기법들.md
@@ -96,6 +96,10 @@ void consumer() {
 
 # 2. mutex
 ## mutex
+mutex - 가장 기본
+recursive_mutex - 재귀 락
+shared_mutex - 동시 읽기 가능, 쓰기 단독
+
 mutex, recursive_mutex, shared_mutex.<br/>
 
 ```c++
@@ -121,7 +125,10 @@ shared_mutex
 
 */
 std::shared_mutex sm;
+std::unique_lock<std::shared_mutex> lock(sm);
 
+lock.lock_shared();
+lock.lock_shared();
 
 ```
 
