--- a/OS/동기화 기법들.md
+++ b/OS/동기화 기법들.md
@@ -95,72 +95,19 @@ void consumer() {
 <br/><br/>
 
 # 2. mutex
-## mutex
-
-mutex - 가장 기본
-recursive_mutex - 재귀 락
-shared_mutex - 동시 읽기 가능, 쓰기 단독
-
-mutex, recursive_mutex, shared_mutex.<br/>
-
-```c++
-/*-------------------------------
-mutex
-가장 기본.
---------------------------------*/
-std::mutex m;
-{
-  std::lock_guard<std::mutex> lock(m);
-  // 크리티컬 섹션
-}
-/*--------------------------------
-recursive_mutex
-
---------------------------------*/
-std::recursive_mutex rm;7
-
-
-std::unique_lock<std::recursive_mutex> lock(rm);
-/*
-shared_mutex
-
-*/
-std::shared_mutex sm;
-std::unique_lock<std::shared_mutex> lock(sm);
-
-lock.lock_shared();
-lock.lock_shared();
-
-```
-
-
 ### mutex
-가장 기본
+가장 기본형.
 
 ### recursive_mutex
+재귀
 
 ### shared_mutex
-
-
-* mutex
-  가장 기본
-* recursive_mutex
-  중첩 가능
-* shared_mutex
-  
-
-
-## mutex RAII 래퍼
-lock_guard, unique_lock, shared_lock.<br/>
+reader-writer 
 
 
 
-lock_guard
-가장 간단, 생성 시 lock, 소멸 시 unlock
 
-unique_lock
-lock, unlock 타이밍을 본인이 조절 가능
-그 외에도 lock_guard 보다 더 많은 기능
+
 
 # 그 외
 packaged task
