--- a/OS/03.프로세스 관리.md
+++ b/OS/03.프로세스 관리.md
@@ -1,39 +1,44 @@
-# 프로세스
-## 1. 프로그램
-디스크에 저장되어 컴퓨터 시스템에 실행 요청 되기 전의 상태.
+## 프로그램 vs 프로세스
+### 프로그램
+디스크에 저장되어 실행 요청 되기 전의 상태
 
-## 2. 프로세스
-실행을 위해 시스템(커널)에 등록되어 실행 대기 또는 실행 중인 작업(프로그램).<br/>
-커널에 등록되어 커널의 관리하에 있는 작업<br/>
-프로세스 관리 블록(PCB)를 할당 받은 작업<br/>
+### 프로세스
+실행을 위해 시스템(커널)에 등록되어 실행 대기 또는 실행 중인 작업<br/>
+프로세스 관리 블록(PCB)를 할당 받은 상태.<br/>
+커널에 등록되어 커널의 관리하에 있는 작업.<br/>
 
-### 2-1) 프로세스 종류
-* 시스템 (커널) 프로세스:<br/>
+### 프로그램에서 프로세스가 되는 과정
+<img width="700" height="400" alt="image" src="https://github.com/user-attachments/assets/f2b410de-048a-4c51-ac47-b9a0974fc329" /><br/>
+
+<br/><br/>
+## 프로세스 종류
+### 1) 시스템(커널) 프로세스
 모든 시스템 메모리와 프로세서의 명령에 액세스 할 수 있는 프로세스.<br/>
-프로세스 실행 순서 제어, 다른 사용자 및 커널 영역 보호, 사용자 프로세스 생성.
+프로세스 실행 순서 제어, 다른 사용자 및 커널 영역 보호, 사용자 프로세스 생성.<br/>
 
-* 사용자 프로세스:<br/>
-사용자 코드를 수행하는 프로세스.
-  
-### 2-2) 프로그램 -> 프로세스
-<img width="1072" height="358" alt="image" src="https://github.com/user-attachments/assets/f2b410de-048a-4c51-ac47-b9a0974fc329" /><br/>
+### 2) 사용자 프로세스
+사용자 코드를 수행하는 프로세스.<br/>
+일반적인 프로그램.<br/>
 
-## 3. 자원 (Resource)의 개념
-커널의 관리 하에 프로세스에게 할당/반납되는 수동적 개체.<br/>
+<br/><br/>
 
-### 3-1) 자원의 분류
-* H/W resources:<br/>
-Processor, memory, disk, monitor, keyboard, ....
+## 프로세스 자원 (Resource)의 개념
+커널의 관리 하에 프로세스에게 할당하고 반납 받는 것.<br/>
 
-* S/W resources:<br/>
-Message, signal, files, installed SWs, ...
+### HW(하드웨어) Resources
+Processor, memory, disk, monitor, keyboard...
 
-## 4. PCB(Process Control Block)
-OS가 프로세스 관리에 필요한 정보 저장.<br/>
-프로세스 생성 시, 생성된다.<br/>
-<img width="713" height="438" alt="image" src="https://github.com/user-attachments/assets/d7b9f1c8-bcaa-4e65-af98-e05c1a1cfc6d" /><br/>
+### SW(소프트웨어) Resources
+Message, signal, files, installed SWs...
 
-### 4-1) PCB가 관리하는 정보
+
+<br/><br/>
+## PCB (Process Control Block)
+OS가 프로세스 관리에 필요한 정보를 저장.<br/>
+프로세스 생성 시에 생성된다.<br/>
+<img width="600" height="300" alt="image" src="https://github.com/user-attachments/assets/d7b9f1c8-bcaa-4e65-af98-e05c1a1cfc6d" /><br/>
+
+### PCB가 관리하는 정보
 <table>
   <tr>
     <td>PID(Process Identification Number)</td>
@@ -65,12 +70,17 @@ OS가 프로세스 관리에 필요한 정보 저장.<br/>
   </tr>
 </table>
 
-## 5. 프로세스의 상태
+<br/><br/>
+## 프로세스 상태
 프로세스는 생성된 후에 여러 가지 상태로 변경되어 가며 작업을 하게 된다.<br/>
-이 상태는 자원 간의 상호작용에 의해 결정이 된다.
 
 ### 할당된 자원에 따른 프로세스 상태
 <img width="845" height="277" alt="image" src="https://github.com/user-attachments/assets/d5e7541a-506d-4440-92aa-3864b7fa7c3f" /><br/>
+* Running: cpu를 할당 받아 현재 작업 중인 상태
+* Ready: cpu 외에 다른 모든 자원을 할당 받은 상태
+* Blocked, asleep: 
+* Suspended Ready: 
+* Suspended Block: 
 
 ### 프로세스의 상태 전이
 <img width="935" height="422" alt="image" src="https://github.com/user-attachments/assets/8889b8c2-c506-4ab1-97fe-7087821eac0c" /><br/>
