Update 04. 스레드 관리.md

--- a/OS/04. 스레드 관리.md
+++ b/OS/04. 스레드 관리.md
@@ -1,3 +1,28 @@
+### 프로세스
+어떠한 자원을 할당 받고 제어한다.
+
+### 스레드
+프로세스 내에서 제어에 대한 부분을 담당.
+<img width="626" height="367" alt="image" src="https://github.com/user-attachments/assets/eadbe446-f2c2-4ddf-8e70-11874bef3243" /><br/>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 # 스레드
 Light Weight Process, 자원&제어 에서 제어 요소만 가지는.
