--- a/OS/04. 스레드 관리.md
+++ b/OS/04. 스레드 관리.md
@@ -1,69 +1,56 @@
-### 프로세스
-어떠한 자원을 할당 받고 제어한다.
 
-### 스레드
-프로세스 내에서 제어에 대한 부분을 담당.
-<img width="626" height="367" alt="image" src="https://github.com/user-attachments/assets/eadbe446-f2c2-4ddf-8e70-11874bef3243" /><br/>
+## 스레드
+프로세스가 어떠한 자원을 할당 받고 제어한다고 생각할 때 스레드는 제어에 대한 부분을 담당한다.<br/>
+<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/eadbe446-f2c2-4ddf-8e70-11874bef3243" /><br/>
+프로세스 메모리 공간.<br/>
+우측이 리소스 공간으로 공용으로 사용하는 공간이다.<br/>
+좌측은 제어에 해당하는 공간으로 스레드 별로 가지게 된다.<br/>
 
+한 프로세스 내에 여러 스레드가 있다면 아래와 같이 표현할 수 있다.<br/>
+<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/a6569975-227b-4b04-aa6f-1e72e5aa16bc" /><br/>
 
+메모리 관점에서 더 세밀하게 표현하면 아래와 같다.<br/>
+<img width="802" height="440" alt="image" src="https://github.com/user-attachments/assets/f758cc10-8f77-491c-bd96-7fb128d0611d" />
+한 프로세스를 위한 공간이 잡혀 있고 리소스(힙, 데이터, 코드) 영역은 공유.
+각 스레드 별로 본인 작업 공간(스택)이 따로 존재.
+코드 영역에 소스 코드가 있고 각 스레드의 PC가 실행할 코드를 가리킴.
 
+## 그래서 스레드란?
+프로세서(CPU) 활용의 기본 단위.<br/>
+제어 요소 외 코드, 데이터 자원들은 프로세스 내 다른 스레드들과 공유.<br/>
+전통적 프로세스 = 단일 스레드 프로세스.<br/>
 
+구성요소
+* 스레드ID
+* Register Set(PC, SP 등)
+* Stack
 
+## 스레드 장점(vs 프로세스)
+### 1. 가벼운 생성과 전환
+스레드는 프로세스보다 생성 비용이 훨씬 적다. 새 프로세스를 만들 때는 메모리 공간 전체를 복사해야 하지만,
+스레드는 같은 프로세스 내에서 실행 흐름만 추가하면 되기 때문이다. <br/>
 
+메모리 주소 공간을 전환할 필요가 없기 때문에 컨텍스트 스위칭도 더 빠르다.
+### 2. 효율적인 자원 공유
+같은 프로세스 내 스레드들은 메모리 공간(코드, 데이터, 힙)을 공유한다.
+프로세스 간 통신(IPC)처럼 복잡한 메커니즘 없이도 데이터를 쉽게 주고 받을 수 있어서 협업이 필요한 작업에
+유리하다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-# 스레드
-Light Weight Process, 자원&제어 에서 제어 요소만 가지는.
-프로세서(CPU)활용의 기본 단위
-
-구성 요소
-Thread ID
-Register Set(PC, SP 등) - 제어하기 위한
-Stack(local data) - 작업 영역
-
-제어 요소 외 코드, 데이터 및 자원들은 프로세스 내 다른 스레드들과 공유
-
-<img width="752" height="408" alt="image" src="https://github.com/user-attachments/assets/6046bd9d-dd2d-4c0c-9e42-4c6f2a8a13c6" />
-PC(Program Counter): 내가 명령줄 어디를 실행하고 있었는지
-SP(Stack Pointer): 
-스택 영역: 지역 데이터
-
-멀티 스레드
-<img width="749" height="407" alt="image" src="https://github.com/user-attachments/assets/693ff459-fb23-4c24-b187-95533fa49232" />
-
-메모리 관점
-<img width="782" height="431" alt="image" src="https://github.com/user-attachments/assets/778b8321-1ba6-4048-b136-8784b54973cb" /><br/>
-어떤 프로세스가 있고 그 프로세스가 할당 받은 메모리 공간을 공유해서 사용.
-공용 메모리 공간에서 자원에 해당하는 공간은 공유해서 사용하고 제어 부분은 그 공간에서 구분해서 사용.
+### 3. 메모리 효율성
+여러 스레드가 같은 메모리 공간을 사용하므로, 동일한 작업을 여러 프로세스로 처리하는 것보다0
 
 
-스레드의 장점
 
-자원 공유
-프로세스는 번갈아(컨텍스트 스위치 발생, 커널의 개입) 사용해야 한다.
-스레드는 동시에 사용 가능하다.(컨텍스트 스위치 발생 X, 커널의 개입을 피할 수 있다.)
 
-경제성
-프로세스의 생성, 컨텍스트 스위치에 비해 효율적
 
-멀티 프로세서 활용
-스레드는 CPU 사용 단위, 여러 개를 동시에 사용할 수 있다.
--> 병렬 처리를 통해 성능 향상.
 
-사용자 응답성
-일부 스레드의 처리가 지연되어도, 다른 스레드는 작업을 계속 처리 가능.
+
+
+
+
+
+
+
 
 
 
