Update 04. 스레드 관리.md

--- a/OS/04. 스레드 관리.md
+++ b/OS/04. 스레드 관리.md
@@ -1,13 +1,23 @@
 
 ## 스레드
-프로세스가 어떠한 자원을 할당 받고 제어한다고 생각할 때 스레드는 제어에 대한 부분을 담당한다.<br/>
-<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/eadbe446-f2c2-4ddf-8e70-11874bef3243" /><br/>
+프로세서(CPU) 활용의 기본 단위.<br/>
+<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/a6569975-227b-4b04-aa6f-1e72e5aa16bc" /><br/>
+위 그림은 프로세스의 메모리 공간을 보여주는 그림이다.<br/>
+
+
+
+
+
+
+
+
+
 프로세스 메모리 공간.<br/>
 우측이 리소스 공간으로 공용으로 사용하는 공간이다.<br/>
 좌측은 제어에 해당하는 공간으로 스레드 별로 가지게 된다.<br/>
 
 한 프로세스 내에 여러 스레드가 있다면 아래와 같이 표현할 수 있다.<br/>
-<img width="500" height="300" alt="image" src="https://github.com/user-attachments/assets/a6569975-227b-4b04-aa6f-1e72e5aa16bc" /><br/>
+
 
 메모리 관점에서 더 세밀하게 표현하면 아래와 같다.<br/>
 <img width="802" height="440" alt="image" src="https://github.com/user-attachments/assets/f758cc10-8f77-491c-bd96-7fb128d0611d" />
