--- a/OS/04. 스레드 관리.md
+++ b/OS/04. 스레드 관리.md
@@ -8,13 +8,14 @@
 
 <br/><br/>
 <img width="802" height="440" alt="image" src="https://github.com/user-attachments/assets/f758cc10-8f77-491c-bd96-7fb128d0611d" /><br/>
-스레드가 개별로 가지는 요소
+스레드 별로 본인 작업 공간 스택 영역이 있고 해당 영역을 가리키는 SP, 실행할 명령줄 위치를 나타내는 PC 등 제어를 위한 
+정보들이 있다.
+
+### 스레드가 개별로 가지는 요소
 * 스레드ID
 * Register Set(PC, SP)
 * Stack
 
-스레드 별로 본인 작업 공간 스택 영역이 있고 해당 영역을 가리키는 SP, 실행할 명령줄 위치를 나타내는 PC 등 제어를 위한 
-정보들이 있다.
 
 <br/><br/>
 # 스레드 장.단점 (vs 프로세스)
@@ -49,11 +50,11 @@
 커널 영역에서 생성되고 커널이 관리하는 스레드.<br/>
 std::thread 같은 것이 커널 수준 스레드.<br/>
 
-장점<br/>
+#### 장점
 유저 레벨과는 다르게 완벽하게 병렬로 실행할 수 있다.<br/>
 즉, 하나의 스레드가 블로킹 되어도 다른 스레드는 계속 실행할 수 있다.<br/>
 
-단점<br/>
+#### 단점
 생성/전환 비용이 유저 레벨 스레드보다 높다.<br/>
 컨텍스트 스위칭 시 커널 모드 전환이 필요하다<br/>
 
@@ -68,11 +69,11 @@ std::thread 같은 것이 커널 수준 스레드.<br/>
 * Lua coroutine
 * Actor
 
-장점<br/>
+#### 장점
 생성과 관리의 부하가 적다.
 커널 레벨로 전환될 필요가 없다.
 
-단점<br/>
+#### 단점
 하나의 스레드가 블록되면 모든 스레드가 대기하게 된다.
 
 
