Update 05. 프로세스 스케줄링.md

--- a/OS/05. 프로세스 스케줄링.md
+++ b/OS/05. 프로세스 스케줄링.md
@@ -89,25 +89,32 @@ scheduling decision = 10ms => 프로세스 스케줄링 시간<br/>
 
 <br/><br/>
 ## 스케줄링 정책
-선점(Preemptive), 비선점(Non-preemptive)
-우선순위(Priority)
+* 선점(Preemptive), 비선점(Non-preemptive)
+* 우선순위(Priority)
 
 ### 비선점(Non-preemptive) 스케줄링
 비선점 -> 선점(빼앗을) 불가 -> 할당 받으면 끝까지 사용 후 스스로 반납.<br/>
 => 할당 받은 자원을 스스로 반납할 때까지 사용.<br/>
 
-예) system call, I/O, Etc..<br/>
+작업 중에 더 급한 작업이 생기더라도 현재 작업을 주어진 시간 동안 끝까지 작업한다는 말로
+컨텍스트 스위칭의 오버헤드가 적다는 장점이 있지만 잦은 우선 순위 역전, 평균 응답 시간 증가의 단점이 있다.
 
-장: 컨텍스트 스위치 오버헤드가 적다.<br/>
-단: 잦은 우선순위 역전, 평균 응답 시간 증가<br/>
+예) system call, I/O, Etc..<br/>
 
 ### 선점(Preemptive) 스케줄링
 선점 -> 선점(빼앗을) 가능 -> 남이 할당 받았더라도 빼앗을 수 있다.<br/>
 => 타인에 의해 자원을 빼앗길 수 있다.<br/>
 
+작업 중에 더 급한 작업이 오면 해당 작업 먼저 처리.<br/>
+응답성이 높아지지만 그만큼 컨텍스트 스위칭의 오버헤드가 커진다.<br/>
+Time-sharing system, real-time system 등에 적합.
+
 예) 할당 시간 종료 후 우선 순위가 높은 프로세스가 등장한 경우<br/>
 
-장:컨텍스트 스위치 오버헤드가 크다.<br/>
+
+
+
+
 
 
 
