--- a/OS/05. 프로세스 스케줄링.md
+++ b/OS/05. 프로세스 스케줄링.md
@@ -86,6 +86,12 @@ Wait Queue에서 처리 순서 결정(A 결정)
 I/O 완료 확인
 ```
 
+### 스케줄링 그림
+<img width="703" height="402" alt="image" src="https://github.com/user-attachments/assets/cf27f014-fde9-454c-8bab-c99eed6a2bba" /><br/>
+
+
+
+<hr/>
 선점 (Preemptive):
 
 CPU를 강제로 뺏을 수 있음
