--- a/C++/레퍼런스.md
+++ b/C++/레퍼런스.md
@@ -43,4 +43,9 @@ t2() = 20; // OK
     <td>복사 없음</td>
   </tr>
 </table>
-주의할 점은 레퍼런스를 반환 후에 객체가 살아있음을 보장되는 환경에서 사용해야 한다.
+
+반환(return)할 때 레퍼런스 타입으로 반환하면 복사 비용을 아낄 수 있다.<br/>
+그래서 stl 컨테이너는<br/>
+조회: const T&,<br/>
+수정: T&<br/>
+위와 같이 사용한다. 사용 시 주의할 점은 레퍼런스를 반환 후에 객체가 살아있음을 보장되는 환경에서 사용해야 한다.
