--- a/자료구조/선형 구조.md
+++ b/자료구조/선형 구조.md
@@ -24,6 +24,52 @@ A -> B -> C -> D
 ```
 
 # 연결 리스트
+```c++
+template<typename T>
+class MyLinkedList {
+  template<typename T>
+  class Node {
+  public:
+    T obj;
+    Node<T>* next = nullptr;
+  };
+public:
+  ~MyLinkedList() {
+    while (head) {
+      Node<T>* tmp = head;
+      head = head->next;
+
+      delete tmp;
+      size--;
+    }
+  }
+  void Push_back(T obj) {
+    Node<T>* newNode = Node<T>{obj, nullptr};
+
+    if (head)
+      newNode->next = head;
+
+    head = newNode;
+    size++; 
+  }
+  void Pop_back() {
+    if (head == nullptr || size == 0)
+      return;
+
+    Node<T>* tmp = head;
+    head = head->next;
+    delete tmp;
+
+    size--;
+  }
+  T& Back() {
+    return head->obj;
+  }
+private:
+  Node<T>* head;
+  int size = 0;
+};
+```
 
 # 스택
 
