--- a/자료구조/선형 구조.md
+++ b/자료구조/선형 구조.md
@@ -43,25 +43,31 @@ public:
       size--;
     }
   }
+  // 삽입
   void Push_back(T obj) {
+    // 새 노드 생성
     Node<T>* newNode = Node<T>{obj, nullptr};
-
+    // 새로운 노드를 헤드로 변경
+    // 만약 기존 헤드가 있으면 기존 헤드를 새 헤드의 next로
     if (head)
       newNode->next = head;
 
     head = newNode;
     size++; 
   }
+  // 삭제
   void Pop_back() {
     if (head == nullptr || size == 0)
       return;
-
+    // head->next를 head로
+    // 떼어낸 head는 삭제
     Node<T>* tmp = head;
     head = head->next;
     delete tmp;
 
     size--;
   }
+  // 조회
   T& Back() {
     return head->obj;
   }
