--- a/자료구조/선형 구조.md
+++ b/자료구조/선형 구조.md
@@ -18,15 +18,16 @@ A -> B -> C -> D
 * 앞뒤 관계 명확
 * 계층 구조 없음
 
-## 선형 리스트(Linear List)
-
+## 선형 리스트(Linear List, 배열 기반)
 ```c++
+
 ```
 
 # 연결 리스트
 ```c++
 template<typename T>
 class MyLinkedList {
+  //
   template<typename T>
   class Node {
   public:
