--- a/자료구조/선형 구조.md
+++ b/자료구조/선형 구조.md
@@ -18,9 +18,43 @@ A -> B -> C -> D
 * 앞뒤 관계 명확
 * 계층 구조 없음
 
-## 선형 리스트(Linear List, 배열 기반)
+## 선형 리스트(배열 기반 리스트, Linear List)
 ```c++
+template<typename T>
+class MyArrayList {
+public:
+  void Push_back(T obj) {
+    if (size == capacity)
+      Resize(capacity * 2);
 
+    data[size++] = obj;
+  }
+  void Pop_back() {
+    size--;
+  }
+  T& Back() {
+    return data[size - 1];
+  }
+  void Resize(int newcapacity) {
+    // 새 공간 할당
+    T* newData = new T[newCapacity];
+
+    // 데이터 복사
+    for (int i = 0; i < size; i++)
+      newData[i] = data[i];
+
+    // 기존 공간 해제
+    delete[] data;
+
+    // 포인터 이동, capacity 변경
+    data = newData;
+    capacity = newCapacity;
+  }
+public:
+  T* data;
+  int size;
+  int capacity;
+};
 ```
 
 # 연결 리스트
