Revise cache memory document with caching policies
Updated cache memory documentation to include cache line policies and types.

--- a/C++/캐시 메모리.md
+++ b/C++/캐시 메모리.md
@@ -21,5 +21,27 @@
 ### 공간지역성
 최근에 참조된 데이터와 인접한 데이터가 참조될 가능성이 높은 특성
 
-## 캐시 라인
+## 캐시 배치 정책(=캐시 라인)
+캐시 사상(mapping) 구조.
 
+### Direct Mapped Cache (직접 사상)
+<img width="482" height="338" alt="image" src="https://github.com/user-attachments/assets/d92e4fe6-cd07-46c7-a927-d4a44873cf5f" /><br/>
+캐시메모리의 공간이 8개(000 ~ 111)이고 메인메모리의 공간이 32개(00000 ~ 11111)이라고 하면 
+메인메모리의 주소가 00000, 01000, 10000, 11000인 곳의 데이터를 캐시 메모리의 주소가 000인 곳에서만 읽고 쓰는 방식이다.<br/>
+
+이때 000을 인덱스 필드(Index Field), 인덱스를 제외한 나머지 비트 00, 01, 10, 11을 태그 필드(Tag Field)라 하고 기본적으로
+태그 비트와 인덱스 비트 뒤에 데이터를 <br/>
+
+간단하고 빠르지만 약점(conflict miss)이 크다. 캐시 메모리 공간 활용도가 굉장히 떨어지고 현대 CPU에서는 어지간하면
+채택되지 않는 편이다.
+
+### Fully Associative Cache(완전 연관 사상)
+비어있는 메모리에 대해 크게 조건 없이 저장하여 캐시 메모리 공간 활용도가 높지만 찾는 것이 힘들다.
+어떤 조건이나 규칙 없이 저장했으니 모든 캐시 블록에서 검색하게 된다.
+
+### Set Associative Cache(집합 연관 사상)
+direct와 fully의 장점을 섞었다고 할 수 있는 가장 나중에 나온 방식으로 현대 CPU 모든 계층의 캐시 메모리에서 
+채택되는 방식.
+
+특정 행을 지정해서 그 행 안의 어떤 열이든 비어있으면 저장하는 방식.
+direct에 비해 검색은 오래 걸리지만 저장이 빠르고, fully에 비해 저장이 느린 대신 검색이 빠른 중간적인 특징을 가진다.
