--- a/C++/캐시 메모리.md
+++ b/C++/캐시 메모리.md
@@ -1,16 +1,32 @@
 # 캐시 메모리(Cache Memory)
 ### 메모리 계층 구조 그림
+레지스터 -> 캐시 -> 메인 메모리 순으로 속도 빠르고 CPU에 가깝고 비싸고 용량이 적다.<br/>
 <img width="670" height="368" alt="image" src="https://github.com/user-attachments/assets/3eceec31-287d-4425-b585-1f27103c8a74" /><br/>
-레지스터, 메인 메모리와 함께 메모리 계층 구조 중 하나. 프로그램에서 직접적으로 사용할 수 없고 하드웨어 메모리 관리
-시스템이 내부적으로 제어한다.<br/>
 
-프로세서의 클럭 속도가 빨리짐에 따라 프로세서 밖에 있는 메인 메모리와의 속도 차이가 현저하게 증가했고 이 때문에 프로세서
-클럭 속도를 아무리 올려도 메인 메모리에서 데이터를 빠르게 제공해 주지 못하여 전체 시스템 성능이 증가하게 어렵게 되었다.<br/>
+### 캐시
+속도 차이가 나는 장치들간에 발생하는 병목 현상 해결을 위해 느린 장치로 가는 횟수를 줄이기 위해 중간에 더 빠른 장치에
+데이터를 미리 가지고 있는 것. 어느 정도의 예측이 필요하기에 이를 위해 데이터 지역성이라는 것을 활용한다.<br/>
 
-위의 내용이 캐시의 필요성과 정의이다. 느린 장치의 속도를 커버하기 위해서 빠른 장치에서 
-속도가 느린 장치로 가지 않고도 데이터를 제공하기 위한 메모리이다. 필요한 데이터를 예측하여 캐시에 보관하여
-메인메모리로 데이터를 요청할 필요가 없게 하는 것으로 이를 위해 데이터 지역성이라는 개념을 사용한다.
-<br/>
+캐시 메모리는 L1, L2, L3 캐시로 나눌 수 있는데 level에 따라 숫자가 작을 수록 CPU와 가깝고 크기가 작다.
+캐시에 많은 데이터를 담아 CPU 처리 속도를 올리는 것은 좋지만, 용량이 정해져있기 때문에 최대한 캐시 적중률(Cache Hit)을 높여 성능을 향상시켜야 한다.
+
+#### Cache Hit
+CPU가 참조하려는 데이터가 캐시 메모리에 있는 경우
+#### Cache Miss
+CPU가 참조하려는 데이터가 캐시 메모리에 없음
+
+1) Compulsory Miss
+한국말로 강제 미스. 데이터에 처음 접근시 캐시에 데이터를 올리기 위해 발생하는 캐시 미스.
+
+2) Capacity Miss
+캐시 용량이 부족하여 발생하는 미스. 프로그램 수행 시 접근하는 데이터의 양이 캐시의 사이즈를 넘어갈 경우 발생.
+예를 들어 32k 캐시 용량을 가지고 있는데 128k 배열 데이터에 접근하는 경우 모두 저장할 수 없으므로 용량 부족에 의한 캐시
+미스가 발생한다.
+
+3) Conflict Miss
+
+4) Coherence Miss
+
 
 ## 데이터 지역성(Data Locality)
 대부분 프로그램은 한 번 사용한 데이터를 재사용할 가능성이 높고, 그 주변의 데이터도 곧 사용할 가능성이 높은 데이터 지역성을
@@ -45,3 +61,8 @@ direct와 fully의 장점을 섞었다고 할 수 있는 가장 나중에 나온
 
 특정 행을 지정해서 그 행 안의 어떤 열이든 비어있으면 저장하는 방식.
 direct에 비해 검색은 오래 걸리지만 저장이 빠르고, fully에 비해 저장이 느린 대신 검색이 빠른 중간적인 특징을 가진다.
+
+
+참조: <br/>
+https://lolki.tistory.com/2 <br/>
+
