--- a/C++/캐시 메모리.md
+++ b/C++/캐시 메모리.md
@@ -1,34 +1,35 @@
+# 캐시란?
+컴퓨터 분야에 사용되는 용어로 데이터를 미리 복사해 놓는 임시 장소를 가리킨다.
+데이터가 본래 저장되어 있던 장소보다 접근 시간이 더 빠른 별도의 장소에 데이터를 미리 복사해 놓으면
+계산이나 접근 시간 없이 더 빠른 속도로 데이터에 접근할 수 있다.
+
 # 캐시 메모리(Cache Memory)
-### 메모리 계층 구조 그림
-레지스터 -> 캐시 -> 메인 메모리 순으로 속도 빠르고 CPU에 가깝고 비싸고 용량이 적다.<br/>
+아래는 메모리 계층 구조에 대한 그림.<br/>
+레지스터, 캐시, 메인 메모리 등이 있고 나열된 순서대로 속도가 빠르고 CPU에 가깝고 비싸고 용량이 적다.<br/>
 <img width="670" height="368" alt="image" src="https://github.com/user-attachments/assets/3eceec31-287d-4425-b585-1f27103c8a74" /><br/>
 
-### 캐시
-속도 차이가 나는 장치들간에 발생하는 병목 현상 해결을 위해 느린 장치로 가는 횟수를 줄이기 위해 중간에 더 빠른 장치에
-데이터를 미리 가지고 있는 것. 어느 정도의 예측이 필요하기에 이를 위해 데이터 지역성이라는 것을 활용한다.<br/>
+그러니까 캐시는 필요한 데이터를 멀리가서 찾을 필요없이 가까운 장소에 미리 필요할만한 데이터를 예상해서 갖다 놓는 방식으로
+이 예상이 적중할 확률을 높이기 위해 데이터 지역성이라는 것을 사용한다.<br/>
 
-캐시 메모리는 L1, L2, L3 캐시로 나눌 수 있는데 level에 따라 숫자가 작을 수록 CPU와 가깝고 크기가 작다.
-캐시에 많은 데이터를 담아 CPU 처리 속도를 올리는 것은 좋지만, 용량이 정해져있기 때문에 최대한 캐시 적중률(Cache Hit)을 높여 성능을 향상시켜야 한다.
-
-#### Cache Hit
-CPU가 참조하려는 데이터가 캐시 메모리에 있는 경우
-#### Cache Miss
-CPU가 참조하려는 데이터가 캐시 메모리에 없음
-
-1) Compulsory Miss
-한국말로 강제 미스. 데이터에 처음 접근시 캐시에 데이터를 올리기 위해 발생하는 캐시 미스.
-
-2) Capacity Miss
-캐시 용량이 부족하여 발생하는 미스. 프로그램 수행 시 접근하는 데이터의 양이 캐시의 사이즈를 넘어갈 경우 발생.
-예를 들어 32k 캐시 용량을 가지고 있는데 128k 배열 데이터에 접근하는 경우 모두 저장할 수 없으므로 용량 부족에 의한 캐시
-미스가 발생한다.
-
-3) Conflict Miss
-
-4) Coherence Miss
-
+* **Cache Hit**
+  * CPU가 참조하려는 데이터가 캐시 메모리에 있는 경우
+* **Cache Miss**
+  * CPU가 참조하려는 데이터가 캐시 메모리에 없음
+  * ***Compulsory Miss***
+    * 데이터에 처음 접근하면 캐시에 데이터를 올리기 위해 발생하는 캐시 미스.
+  * ***Capacity Miss***
+    * 캐시 메모리 공간이 부족해서 나는 캐시 미스.
+  * ***Conflict Miss***
+    * ㅇㅇㅇ
+  * ***Coherence Miss***
+    * dd
 
 ## 데이터 지역성(Data Locality)
+### 공간 지역성
+최근에 사용했던 데이터와 인접한 데이터가 참조될 가능성이 높다.
+### 시간 지역성
+최근에 사용했던 데이터가 재참조될 가능성이 높다.
+
 대부분 프로그램은 한 번 사용한 데이터를 재사용할 가능성이 높고, 그 주변의 데이터도 곧 사용할 가능성이 높은 데이터 지역성을
 가지고 있다. 데이터 지역성을 활용하여 메인 메모리에 있는 데이터를 캐시 메모리에 불러와 두고 프로세서가 필요한 데이터를 캐시 메모리에서 먼저 찾으면 시스템 성능을 향상시킬 수 있다.<br/>
 
