--- a/C++/캐시 메모리.md
+++ b/C++/캐시 메모리.md
@@ -16,11 +16,13 @@
 * **Cache Miss**
   * CPU가 참조하려는 데이터가 캐시 메모리에 없음
   * ***Compulsory Miss***
-    * 데이터에 처음 접근하면 캐시에 데이터를 올리기 위해 발생하는 캐시 미스.
+    * 해당 데이터에 대한 요청 자체가 처음.
   * ***Capacity Miss***
-    * 캐시 메모리 공간이 부족해서 나는 캐시 미스.
+    * 요청 받아서 들어왔으나 캐시 크기 한계로 인해서 빠짐
+    * 그 후 다시 요청됬는데 없는 경우.
   * ***Conflict Miss***
-    * ㅇㅇㅇ
+    * 캐시 용량은 충분, 매핑 방식으로 인한 충돌
+    * direct-mapped, low-associativity에서 발생.
   * ***Coherence Miss***
     * dd
 
@@ -28,42 +30,11 @@
 ### 공간 지역성
 최근에 사용했던 데이터와 인접한 데이터가 참조될 가능성이 높다.
 ### 시간 지역성
-최근에 사용했던 데이터가 재참조될 가능성이 높다.
+사용된 데이터(메모리)가 재사용될 가능성이 높다.
 
-대부분 프로그램은 한 번 사용한 데이터를 재사용할 가능성이 높고, 그 주변의 데이터도 곧 사용할 가능성이 높은 데이터 지역성을
-가지고 있다. 데이터 지역성을 활용하여 메인 메모리에 있는 데이터를 캐시 메모리에 불러와 두고 프로세서가 필요한 데이터를 캐시 메모리에서 먼저 찾으면 시스템 성능을 향상시킬 수 있다.<br/>
-
-### 시간지역성
-최근에 참조된 데이터가 곧 다시 참조되는 특성
-### 공간지역성
-최근에 참조된 데이터와 인접한 데이터가 참조될 가능성이 높은 특성
-
-## 캐시 배치 정책(=캐시 라인)
-캐시 사상(mapping) 구조.
-
-### Direct Mapped Cache (직접 사상)
-<img width="482" height="338" alt="image" src="https://github.com/user-attachments/assets/d92e4fe6-cd07-46c7-a927-d4a44873cf5f" /><br/>
-캐시메모리의 공간이 8개(000 ~ 111)이고 메인메모리의 공간이 32개(00000 ~ 11111)이라고 하면 
-메인메모리의 주소가 00000, 01000, 10000, 11000인 곳의 데이터를 캐시 메모리의 주소가 000인 곳에서만 읽고 쓰는 방식이다.<br/>
-
-이때 000을 인덱스 필드(Index Field), 인덱스를 제외한 나머지 비트 00, 01, 10, 11을 태그 필드(Tag Field)라 하고 기본적으로
-태그 비트와 인덱스 비트 뒤에 데이터를 <br/>
-
-간단하고 빠르지만 약점(conflict miss)이 크다. 캐시 메모리 공간 활용도가 굉장히 떨어지고 현대 CPU에서는 어지간하면
-채택되지 않는 편이다.
-
-### Fully Associative Cache(완전 연관 사상)
-비어있는 메모리에 대해 크게 조건 없이 저장하여 캐시 메모리 공간 활용도가 높지만 찾는 것이 힘들다.
-어떤 조건이나 규칙 없이 저장했으니 모든 캐시 블록에서 검색하게 된다.
-
-### Set Associative Cache(집합 연관 사상)
-direct와 fully의 장점을 섞었다고 할 수 있는 가장 나중에 나온 방식으로 현대 CPU 모든 계층의 캐시 메모리에서 
-채택되는 방식.
-
-특정 행을 지정해서 그 행 안의 어떤 열이든 비어있으면 저장하는 방식.
-direct에 비해 검색은 오래 걸리지만 저장이 빠르고, fully에 비해 저장이 느린 대신 검색이 빠른 중간적인 특징을 가진다.
+## 실사용
+루프에서 행 우선 순회.
+연결리스트 기반보다 배열 기반.
 
 
-참조: <br/>
-https://lolki.tistory.com/2 <br/>
 
