--- a/OS/메모리.md
+++ b/OS/메모리.md
@@ -1,5 +1,21 @@
 
 # 메모리풀
+## 메모리 할당
+### 고정 크기(fixed)
+고정된 크기로 할당.
+```
+[64][64][64][64]....
+```
+
+### 가변 크기(variable)
+요청 크기에 맞춰 할당.
+```
+[128][64][32][80]...
+```
+
+
+
+
 ## 메모리풀 사용, 필요 이유
 1. 시스템 콜 오버헤드
    * 일반 malloc/new는 시스템콜을 호출해 느린 반면 메모리풀을 사용하면 시스템콜을 사용하지 않아 빠르다.
@@ -12,10 +28,27 @@
    * 연속된 메모리 영역을 사용하므로 cpu 캐시 히트율이 높아진다.
    * 데이터 지역성(locality)이 개선된다.
 
-게임 엔진, 네트워크 서버, 데이터베이스 등 고성능이 요구되는 시스템에서 많이 활용된다.
-다만 사용 패턴이 예측 가능하고 비슷한 크기의 객체를 많이 다룰 때 가장 효과적이다.
+## 메모리 할당
+### 고정 크기 할당(Fixed)
+미리 정해진 크기 규격으로 할당.-
+장:구현이 단순, 할당과 해제 비용이 적다.
+단:내부 단편화, 메모리 사용 효율 낮다.
+
+### 가변 크기 할당(Variable)
+필요로 하는 크기만큼 동적으로 할당하는 방식.
+
+장: 메모리 사용 효율이 높다.
+단: 할당과 해제에 대한 비용이 높다.
+
 
 ## 메모리 단편화(Fragmentation)
+### 내부 단편화
+할당된 메모리 공간에 비해 실제 사용하는 공간이 적은 경우(=다 사용 안함).
+주로 고정 분할 방식에서 발생.
+### 외부 단편화
+
+
+
 <img width="733" height="416" alt="image" src="https://github.com/user-attachments/assets/c0722f95-b649-4797-8428-5d1db73ad01d" /><br/>
 * 1~3: first->third까지 차례대로 메모리 할당
 * 4: 중간에 second 메모리 할당 해제
