--- a/C++/캐시 메모리.md
+++ b/C++/캐시 메모리.md
@@ -1,4 +1,4 @@
-# 캐시란?
+# 캐시
 컴퓨터 분야에 사용되는 용어로 데이터를 미리 복사해 놓는 임시 장소를 가리킨다.
 데이터가 본래 저장되어 있던 장소보다 접근 시간이 더 빠른 별도의 장소에 데이터를 미리 복사해 놓으면
 계산이나 접근 시간 없이 더 빠른 속도로 데이터에 접근할 수 있다.
@@ -28,13 +28,17 @@
 
 ## 데이터 지역성(Data Locality)
 ### 공간 지역성
-최근에 사용했던 데이터와 인접한 데이터가 참조될 가능성이 높다.
+사용된 데이터의 인접한 데이터가 곧 사용될 가능성이 높다.<br/>
+ex)<br/>
+* 배열
+* 구조체
+* 순차적 코드 실행
 ### 시간 지역성
-사용된 데이터(메모리)가 재사용될 가능성이 높다.
-
-## 실사용
-루프에서 행 우선 순회.
-연결리스트 기반보다 배열 기반.
-
+최근 사용된 데이터가 또 사용될 가능성이 높다.<br/>
+ex)<br/>
+* 반복문
+* 함수 호출
 
 
+참조 : <br/>
+https://velog.io/@leesfact/%EC%BA%90%EC%8B%9C%ED%9E%88%ED%8A%B8%EC%99%80-%EC%BA%90%EC%8B%9C%EB%AF%B8%EC%8A%A4 <br/>
