Enhance memory fragmentation section with examples
Clarified definitions of internal and external fragmentation in memory management. Added examples to illustrate memory allocation scenarios.

--- a/OS/메모리.md
+++ b/OS/메모리.md
@@ -43,25 +43,31 @@
 
 ## 메모리 단편화(Fragmentation)
 ### 내부 단편화
-할당된 메모리 공간에 비해 실제 사용하는 공간이 적은 경우(=다 사용 안함).
-주로 고정 분할 방식에서 발생.
+할당된 메모리 공간에 비해 실제 사용하는 공간이 적어서 빈 공간만큼 낭비.
+```
+// 할당 16, 사용 12, 미사용4
+[       사용       |미사용]
+```
 ### 외부 단편화
+메모리 할당,해제를 반복하여 연속적이지 않은 빈 공간들이 늘어나는 경우<br/>
+메모리 공간이 파편화.
+```
+// 16 할당 a
+[a][][][][][]
 
+// 16 할당 b
+[a][b]
 
+// 16 할당 c
+[a][b][c]
 
-<img width="733" height="416" alt="image" src="https://github.com/user-attachments/assets/c0722f95-b649-4797-8428-5d1db73ad01d" /><br/>
-* 1~3: first->third까지 차례대로 메모리 할당
-* 4: 중간에 second 메모리 할당 해제
-* 새로운 공간(16을 초과하는) 할당 필요
-* 공간 없어서 할당 못함.
+// b 할당 해제
+[a][16 빈 공간][c]
 
-위와 같이 빈 공간들이 발생하게 되어 메모리 공간을 옳게 사용하지 못하게 되는 것을 메모리 단편화라고 한다.<br/>
-여기서 내부 단편화와 외부 단편화로 나뉘게 되는데
+// 20 할당 d
+[a][16 빈 공간][c][d][빈 공간]...
+```
 
-* 외부 단편화
-  * 할당하는 메모리 공간 사이에 빈 공간이 있어서 연속적으로 할당하기 힘든 경우.
-* 내부 단편화
-  * 할당된 메모리 공간을 다 사용하지 않는 경우.
 
 ## 메모리 오버헤드(메타 데이터)
 
